5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1745_1521.log
== TEST (2019-05-15 14:17:58) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: "))
semanas = capacidade - estoque / quantidade

print(semanas)

-- OUTPUT:
37.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:15) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: ")

soma =  0 #variavel acumuladora 
cont = 0 #variavel contadora 

while (estoque + quantidade > 0):
	soma = soma + quantidade
	cont = cont + 1
	
-- ERROR:
File "XXXX", line 5
    soma =  0 #variavel acumuladora 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:25) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: ")

soma = 0 #variavel acumuladora 
cont = 0 #variavel contadora 

while (estoque + quantidade > 0):
	soma = soma + quantidade
	cont = cont + 1
	
-- ERROR:
File "XXXX", line 5
    soma = 0 #variavel acumuladora 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:24:44) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: ")

soma = 0 
cont = 0

while (estoque + quantidade > 0):
	soma = soma + quantidade
	cont = cont + 1
	
-- ERROR:
File "XXXX", line 5
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:42) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: ")

soma = 0 
cont = 0

while (estoque + quantidade > 0):
	soma = soma + quantidade
	cont = cont + 1
	semanas =  cont
	print(semanas)
-- ERROR:
File "XXXX", line 5
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:53) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: ")

soma = 0 
cont = 0 
					  
while (estoque + quantidade > 0):
	soma = soma + quantidade
	cont = cont + 1
	semanas =  cont
	print(semanas)
-- ERROR:
File "XXXX", line 5
    soma = 0 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:39) 
-- CODE:
capacidade =  int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade de containers que chegam a cada semana: ")

					  
while (estoque + quantidade > 0):
	soma = soma + quantidade
	cont = cont + 1

-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
